# PyLib-YOLOv4-tiny-tracking

./: CMakeLists.txt  lib.cpp
include/: darknet.h  demo.h  image_opencv.h
